--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="nome_app">s2Pet</string>
-    <string name="title_activity_login">Sign in</string>
+    <string name="title_activity_login">Logar</string>
 
     <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
+    <string name="prompt_email">E-mail</string>
     <string name="prompt_password">Senha</string>
     <string name="action_sign_in">Entrar ou registrar</string>
     <string name="action_sign_in_short">Entrar</string>
@@ -12,14 +12,14 @@
     <string name="error_incorrect_password">Esta senha está incorreta</string>
     <string name="error_field_required">Este campo é obrigatório</string>
     <string name="permission_rationale">"Permissões de contatos são necessários para o fornecimento de e-mail conclusões." </string>
-    <string name="title_activity_menu_principal">MenuPrincipal</string>
+    <string name="title_activity_menu_principal">Menu Principal</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Configuração</string>
     <string name="title_activity_menu_lateral">MenuLateral</string>
-    <string name="s2_pet">s2Pet</string>
+
 
 
 </resources>
